fixed minor ui issue with message body clipping to right side change in feeds.css msg_body style.
removed console.log statement

--- a/css/feeds.css
+++ b/css/feeds.css
@@ -40,6 +40,7 @@
   padding: 0.5em 0.3em 1.2em 0.3em;
   font-size: 0.9em;
   line-height: 1.1em;
+  word-break: break-word;
 }
 .senderLinkAnc{
   text-decoration: initial;
